[iOS] Log navigation types using FeatureCounter API https://bugs.webkit.org/show_bug.cgi?id=139753

Reviewed by Darin Adler.

Log navigation types using FeatureCounter API.

No new tests, no behavior change other than additional feature
counting.

* loader/FrameLoader.cpp:
(WebCore::logNavigationWithFeatureCounter):
(WebCore::FrameLoader::loadWithDocumentLoader):
* platform/FeatureCounterKeys.h:


Canonical link: https://commits.webkit.org/157681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177504 268f45cc-cd09-0410-ab3c-d52691b4dbfc